fixing link layout bug adding div around social link for better responsive css

--- a/app/assets/stylesheets/pages/_talents.scss
+++ b/app/assets/stylesheets/pages/_talents.scss
@@ -632,23 +632,23 @@ section.talent {
 
             & .social-links>a {
               & .youtube-link {
-                top: 80px !important;
-                left: 360px !important;
+                // top: 80px !important;
+                // left: 360px !important;
               }
 
               & .insta-link {
-                top: 165px !important;
-                right: -210px !important;
+                // top: 165px !important;
+                // right: -210px !important;
               }
 
               & .tiktok-link {
-                top: 260px !important;
-                left: 410px !important;
+                // top: 260px !important;
+                // left: 410px !important;
               }
 
               & .media-kit {
-                top: 280px !important;
-                left: -70px !important;
+                top: 210px !important;
+                // left: -70px !important;
               }
             }
 
